--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -196,47 +196,103 @@ input[type=number]::-webkit-outer-spin-button {
   color: #F16D7F;
 }
 
-.offer_content {
-  margin-top: 65px;
-}
-.offer_cards_up {
-  gap: 30px;
+/* .offer {
+  &_content {
+    margin-top: 65px;
+  }
+
+  &_cards_up {
+    // display: flex;
+    gap: 30px;
+    // flex-wrap: wrap;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(232px, 1fr));
+    justify-content: center;
+    justify-items: center;
+  }
+
+  &_card {
+    position: relative;
+
+    &-1 {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+      flex-wrap: nowrap;
+      gap: 5px;
+    }
+
+    &-text {
+      color: #fff;
+      text-align: center;
+      font-size: 16px;
+      font-weight: 400;
+      text-transform: uppercase;
+    }
+
+    &-group {
+      color: $colorSiteMainElement;
+      font-size: 24px;
+      font-weight: 700;
+      text-transform: uppercase;
+    }
+  }
+
+  &_cards_down {
+    margin-top: 30px;
+  }
+} */
+.sale {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(232px, 1fr));
-  justify-content: center;
-  justify-items: center;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  padding-top: 64px;
 }
-.offer_card {
+.sale__item {
   position: relative;
 }
-.offer_card-1 {
+.sale__content {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  top: 0px;
-  left: 0px;
   width: 100%;
   height: 100%;
-  flex-wrap: nowrap;
-  gap: 5px;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.offer_card-text {
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
+.sale__item_big {
+  min-height: 180px;
+  grid-column: 1/-1;
+}
+.sale__text {
+  font-style: normal;
   font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #FFFFFF;
   text-transform: uppercase;
 }
-.offer_card-group {
-  color: #F16D7F;
-  font-size: 24px;
+.sale__heading {
+  font-style: normal;
   font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #F16D7F;
   text-transform: uppercase;
 }
-.offer_cards_down {
-  margin-top: 30px;
+.sale__img {
+  max-width: 100%;
 }
 
 .products {
@@ -1019,8 +1075,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media (width < 769px) {
   .center {
-    padding-left: calc(50% - 16px);
-    padding-right: calc(50% - 16px);
+    /* padding-left: calc(50% - 16px); */
+    padding-left: 16px;
+    /* padding-right: calc(50% - 16px); */
+    padding-right: 16px;
   }
   .header_logo_group {
     padding-left: 32px;
@@ -1043,10 +1101,37 @@ input[type=number]::-webkit-outer-spin-button {
   .title-header-down {
     font-size: 24px;
   }
-  .offer_content {
-    margin-top: 20px;
+  /*     .offer {
+          &_content {
+              margin-top: 20px;
+          }
+
+          &_cards_up {
+              gap: 19px;
+          }
+
+      } */
+  .sale {
+    gap: 20px;
   }
-  .offer_cards_up {
-    gap: 19px;
+  .sale__text {
+    width: 155px;
+  }
+  .sale__img {
+    height: 100%;
+  }
+  .products_elements {
+    gap: 16px;
+  }
+  .footer_head {
+    gap: 48px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 48px;
+    padding-bottom: 64px;
+  }
+  .footer_title {
+    flex-wrap: wrap;
+    gap: 48px;
   }
 }/*# sourceMappingURL=style.css.map */
