--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -188,7 +188,7 @@ input[type="number"]::-webkit-outer-spin-button {
   }
 }
 
-.offer {
+/* .offer {
   &_content {
     margin-top: 65px;
   }
@@ -239,6 +239,54 @@ input[type="number"]::-webkit-outer-spin-button {
 
   &_cards_down {
     margin-top: 30px;
+  }
+} */
+
+.sale {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  padding-top: 64px;
+
+  &__item {
+    position: relative;
+  }
+  &__content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  &__item_big {
+    min-height: 180px;
+    grid-column: 1 / -1;
+  }
+  &__text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+  }
+  &__heading {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    color: $colorSiteMainElement;
+    text-transform: uppercase;
+  }
+
+  &__img {
+    max-width: 100%;
   }
 }
 
