верстаю страницу домашнего задания

--- a/02_HTML_CSS/01_DZ/_media_768.scss
+++ b/02_HTML_CSS/01_DZ/_media_768.scss
@@ -67,6 +67,14 @@
         }
     }
 
+    .page_product_title {
+        display: flex;
+
+        &_product_description {
+            position: relative;
+        }
+    }    
+
     .footer {
         &_head {
             gap: 48px;
