--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -324,6 +324,7 @@ input[type="number"]::-webkit-outer-spin-button {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    justify-content: center;
   }
 
   &_card {
@@ -1059,6 +1060,9 @@ input[type="number"]::-webkit-outer-spin-button {
     background-color: #222224;
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 
     &_card {
       display: flex;
