--- a/02_HTML_CSS/01_DZ/style/_media_1024.scss
+++ b/02_HTML_CSS/01_DZ/style/_media_1024.scss
@@ -1,4 +1,4 @@
-@media (width < 769px) {
+@media (width < 1025px) {
   .center {
     /* padding-left: calc(50% - 16px); */
     padding-left: 16px;
@@ -18,7 +18,8 @@
 
     &_content {
       &_img {
-        width: 384px;
+        // width: 384px;
+        width: 560px;
       }
       height: auto;
     }
@@ -63,11 +64,11 @@
 
   .products {
     &_elements {
-        gap: 16px;
+      gap: 16px;
     }
-    
-    &_elements .products_card:nth-child(3n) {
-        display: none;
+
+    &_elements &__hide {
+      display: none;
     }
   }
 
@@ -81,10 +82,34 @@
     }
 
     &_additional_cards {
-        margin-top: 128px;
+      margin-top: 128px;
     }
   }
 
+  .cart {
+    width: 734px;
+
+    &__buttons {
+      gap: 48px;
+      justify-content: center;
+    }
+  }
+
+  .lists-cart {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 64px;
+
+    &__right {
+      flex-direction: row;
+      gap: 15px;
+      align-items: center;
+    }
+  }
+
+  .registration {
+    gap: 22px;
+  }
   .footer {
     &_head {
       gap: 48px;
@@ -92,6 +117,7 @@
       justify-content: center;
       padding-top: 48px;
       padding-bottom: 64px;
+      flex-direction: column;
     }
 
     &_title {
