--- a/02_HTML_CSS/01_DZ/style/style.scss
+++ b/02_HTML_CSS/01_DZ/style/style.scss
@@ -655,7 +655,6 @@ input[type="number"]::-webkit-outer-spin-button {
     font-size: 11px;
     font-weight: 400;
     line-height: 13px;
-    margin-right: -9px;
   }
 
   &__grand {
@@ -664,7 +663,6 @@ input[type="number"]::-webkit-outer-spin-button {
     line-height: 19px;
     color: #222;
     margin-top: 12px;
-    margin-right: -6px;
 
     &_span {
       font-weight: 700;
@@ -1201,4 +1199,5 @@ input[type="number"]::-webkit-outer-spin-button {
   }
 }
 
+@import "media_1024";
 @import "media_768";
