Исправил ошибку. вернул фон для footer-а

--- a/02_HTML_CSS/01_DZ/style/style.scss
+++ b/02_HTML_CSS/01_DZ/style/style.scss
@@ -1095,7 +1095,7 @@ input[type="number"]::-webkit-outer-spin-button {
     padding-bottom: 126px;
 
     &_background {
-      background-image: url("./img/footer_background.jpg");
+      background-image: url("../img/footer_background.jpg");
       background-repeat: no-repeat;
       background-size: cover;
     }
