--- a/02_HTML_CSS/01_DZ/style/style.css
+++ b/02_HTML_CSS/01_DZ/style/style.css
@@ -988,7 +988,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding-bottom: 126px;
 }
 .footer_title_background {
-  background-image: url("./img/footer_background.jpg");
+  background-image: url("../img/footer_background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
