сверстал версию сайта для разрешения 375 и 425 px

--- a/02_HTML_CSS/01_DZ/style/_media_1024.scss
+++ b/02_HTML_CSS/01_DZ/style/_media_1024.scss
@@ -99,6 +99,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 64px;
+    padding-top: 59px;
 
     &__right {
       flex-direction: row;
